product search and details api
